src/test/ui/reachable/expr_block.stderr
error: unreachable expression
  --> $DIR/expr_block.rs:10:9
   |
LL |         22
   |         ^^
   |
note: lint level defined here
  --> $DIR/expr_block.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^
note: any code following this expression is unreachable
  --> $DIR/expr_block.rs:9:9
   |
LL |         return;
   |         ^^^^^^

error: unreachable statement
  --> $DIR/expr_block.rs:25:9
   |
LL |         println!("foo");
   |         ^^^^^^^^^^^^^^^^
   |
note: any code following this expression is unreachable
  --> $DIR/expr_block.rs:24:9
   |
LL |         return;
   |         ^^^^^^
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to 2 previous errors

